0.10.9 (testing)
* INTERNAL: New version of popup - tooltip and popup mashup
* BUGFIX: If there is no server active, then label Not Set is shown instead of No Problem

0.10.4
* BUGFIX: removed annoying alert when there was sometimes problem with playing sound

0.10.3
* BUGFIX: sounds are playing again
* BUGFIX: popup of different type sometimes opened at same time
* LANG: updated fr-FR locale
* LANG: updated bg-BG locale

0.10.2 (not approved on Mozilla Add-ons)
* INTERNAL: bugfix of "0.10.1 bugfix" Sorry!

0.10.1
* INTERNAL: merged omitted bugfixes from versions 0.9.1-0.9.5

0.10
* NEW: ability to change ordering of servers
* NEW: time of last download of alerts for each server (shown in tooltip)
* NEW: ability to choose inverse filtering of regular expressions
* NEW: added filtering of flapping hosts and services
* NEW: support for Flock 0.9+
* NEW: added option to show hosts and services flags in tooltip
* BUGFIX: now handles correctly Nagioses having its source code from unknown reasons without newline chracters
* INTERNAL: First time succesfully tested on 3rd version of Nagios (3.0a5)

0.9.5
* BUGFIX: Stop/Run issues when triggered from window other than first
* BUGFIX: Fixed filtering of services by regular expression

0.9.4
* BUGFIX: Fixed empty tooltip/popup in windows other than first

0.9.2
* BUGFIX: Correct locating of url for pages without a slash on the end of the url

0.9.1
* BUGFIX: Correct input box for server URL in New Server dialog in some translations
* BUGFIX: Service names are now escaped for correct URL of service info page

0.9:
* BUGFIX: opening links from popup
* NEW: option to disable/enable server
* NEW: regexp on host or service
* NEW: option to specify working hours (by M.Sviba)
* NEW: special icons for Not Allowed and Stopped status
* BUGFIX: opening links from Thunderbird (by I.Musil)
* INTERNAL: new uri parsing (based on parseUri() function)
* BUGFIX: icon tooltips were not removed correctly

0.8:

* NEW: option to set custom WAVs