@@ -92,3 +92,4 @@ enable=Zapnout
 disabledRun=Nagios Checker nemůže běžet v tomto okně prohlížeče. Viz nastavení rozšíření. 
 stoppedRun=Běh rozšíření Nagios Checker byl zastaven. Použijte kontextové menu rozšíření k opětovnému spuštění.
 flags=Příznaky
+notSet=Nenastaveno
