@@ -79,3 +79,4 @@ enable=Enable
 disabledRun=Nagios Checker is not allowed to run in this window. Check the extension's settings. 
 stoppedRun=Run of Nagios Checker is stopped. Use extension's context menu to start it again.
 flags=Flags
+notSet=Not set
