@@ -1,7 +1,9 @@
 0.10.9 (testing)
 * INTERNAL: New version of popup - tooltip and popup mashup
+* INTERNAL: Popup scrollbars are used instead of arrows, but scrollbars have to be still visible
 * BUGFIX: If there is no server active, then label Not Set is shown instead of No Problem
-
+* BUGFIX: Regexp on services used to remove the whole host - fixed
+* INTERNAL: Limit of number of servers increased to 200
 0.10.4
 * BUGFIX: removed annoying alert when there was sometimes problem with playing sound
 
